Intro to functions

--- a/Week2/Events and Functions.html
+++ b/Week2/Events and Functions.html
@@ -3,10 +3,15 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Events and Functions</title>
+		<script type="text/javascript">
+			function greet_the_user(){
+				alert('Hello!');
+				alert('We start soon...');
+				prompt('Excited?!');
+			}
+		</script>
 	</head>
-	<body onload="alert('Hello!');
-					alert('We start soon...');
-					prompt('Excited?!')">
+	<body onload="greet_the_user()">
 		<p>
 			3 popup windows are shown as soon as the page is loaded.
 		</p>
