Corrected map.html

--- a/Week3/map.html
+++ b/Week3/map.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>Map</title>
 		<script type="text/javascript">
-			var square = function(e){ return e1*e1; }
+			var square = function(e){ return e*e; }
 			var numbers = [1,2,3,4,5];
 			var results = numbers.map(square);
 			alert(results); // This shows [1,4,9,16,25]
