--- a/Week3/MoreOnArrays.html
+++ b/Week3/MoreOnArrays.html
@@ -24,6 +24,19 @@
 			//pets.splice(position,quantity);
 			//array.splice(position,0,element) for insertion
 
+			/*
+				a = [1,2,3,4,5,6];
+				a.splice(2,1); //removes an element from index 2
+					[1,2,4,5,6]
+				a.splice(2,2); //removes two elements from index 2
+					[1,2,5,6]
+				a.splice(2,0,9); // adds an element at index 2
+					[1,2,9,3,4,5,6]
+				a.splice(2,1,9); //replaces an element at index 2 by 9
+					[1,2,9,4,5,6]
+				a.splice(2,1,9,8); //replaces an element at index 2 by 9 and 8
+			*/
+
 			pets = ["Dog", "Cats", "Rabbit", "Hamster"];
 			var result = pets.slice(1);
 			//result is ["Cats", "Rabbit", "Hamster"]
