Difference between map and foreach

--- a/Week3/ForEach.html
+++ b/Week3/ForEach.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>Array Functions</title>
 		<script type="text/javascript">
-			//foreach
+			//foreach does allow modifications to the original array
 			//array.forEach(yourFunction)
 			//function yourFunction(element,index,array)
 			var pets = ["Dog", "Cat", "Rabbit", "Hamster"];
