--- a/Week3/map.html
+++ b/Week3/map.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<title>Map</title>
 		<script type="text/javascript">
+			//map does not allow modifications to the original array
 			var square = function(e){ return e*e; }
 			var numbers = [1,2,3,4,5];
 			var results = numbers.map(square);
