--- a/Week3/An Example DOM Project.html
+++ b/Week3/An Example DOM Project.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta http-equiv="refresh" content="1">
 		<title>An Example DOM Project</title>
 		<style media="screen">
 			div{position: absolute;}
